--- a/indexe.html
+++ b/indexe.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>projet</title>
 </head>
-  <body>
-    <div class="contenue">
+ <body>
+     <div class="contenue">
           <div class="section1">
               <nav>
                   <div class="menu">
@@ -21,31 +20,33 @@
                      </ul>
                   </div>
               </nav>
-              <div class="section Accueil">
-                  <form action ="Mon formulaire" methode="post">
-                        <div>
-                            <label for="Accueil">Accueil :</label>
-                            <input type="text" id="Accueil" name="user_name">
-                        </div>
-                        <div>
-                            <label for="A propos">A propos :</label>
-                            <input type="text" id="A propos" name="user_name">
-                        </div>
-                        <div>
-                            <label for="Travail">Travail :</label>
-                            <input type="text" id="Travail" name="user_name">
-                        </div>
-                        <div>
-                            <label for="Contact">Contact :</label>
-                            <input type="texte" id="Cv" name="user_name">
-                        </div>
-                        <div>
-                            <label for="Cv">Cv :</label>
-                            <input type="file" id="Cv" name="user_name">
-                        </div>
-                        <input type="submit" value="Envoyer le formulaire">
-                    </form>
-                </div>
+             <form action ="Mon formulaire" methode="post">
+                  <div class="section Accueil">
+                      <label for="Accueil">Accueil :</label>
+                      <input type="text" id="Accueil" name="user_name">
+                  </div>
+                  <div class="section A propos">
+                      <label for="A propos">A propos :</label>
+                      <input type="text" id="A propos" name="user_name">
+                  </div>
+                  <div>
+                      <label for="Travail">Travail :</label>
+                      <input type="text" id="Travail" name="user_name">
+                  </div>
+                  <div class="section Contact">
+                      <label for="Contact">Contact :</label>
+                      <input type="texte" id="Cv" name="user_name">
+                  </div>
+                  <div class="section Cv">
+                      <label for="Cv">Cv :</label>
+                      <input type="file" id="Cv" name="user_name">
+                  </div>
+                  <input type="submit" value="Envoyer le formulaire">
+              </form>
+            </div>
         </div>
-   </body>
+        <footer>
+            Pied de page
+            </footer>
+    </body>
 </html>
